# AVGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/glfw/: CMakeLists.txt
lib/imgui/: imgui_impl_glfw_gl3.cpp
shaders/: blit.frag  blit.vert  blur.frag  coc.frag  cube_grid.frag  cube_grid.vert  dirLight.frag  dof.frag  gamma.frag  glitch.frag  sphere.frag  sphere.vert
src/: BezierCurve.cpp  BezierCurve.hpp
